--- a/PChart_Lib/index.html
+++ b/PChart_Lib/index.html
@@ -5,29 +5,26 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>PChart</title>
+	<title>PChart_Lib</title>
 
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
-	<script src="PChart.js"></script>
 	<script src="sketch.js"></script>
-	
+	<!-- Adding PChart to the project. -->
+	<script src="P_Lib.js"></script>
+
 	<style>
-		body {	
+		body {
 			margin:0;
 			padding:0;
 			overflow: hidden;
-			
 		}
 		canvas {
-			margin:10px;
-			padding:10px;
+			margin:auto;
 		}
 	</style>
 </head>
 <body>
-
-	
 </body>
 </html>
